--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>domicilio-ai-manager</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="/favicon.ico" />
 
     <meta property="og:title" content="domicilio-ai-manager" />
     <meta property="og:description" content="Lovable Generated Project" />
